--- a/public/index.html
+++ b/public/index.html
@@ -78,34 +78,10 @@
           </div>
         </div>
       </header>
+
       <section id="skills">
         <h2>Skills</h2>
-        <ul class="skills">
-          <li>
-            <h3>HTML5</h3>
-            <p class="subHeader">3 Years Experience</p>
-          </li>
-          <li>
-            <h3>CSS3</h3>
-            <p class="subHeader">3 Years Experience</p>
-          </li>
-          <li>
-            <h3>JavaScript</h3>
-            <p class="subHeader">2 Years Experience</p>
-          </li>
-          <li>
-            <h3>Accessibility</h3>
-            <p class="subHeader">1 Year Experience</p>
-          </li>
-          <li>
-            <h3>BEM</h3>
-            <p class="subHeader">3 Years Experience</p>
-          </li>
-          <li>
-            <h3>GIT</h3>
-            <p class="subHeader">3 Years Experience</p>
-          </li>
-        </ul>
+        <ul class="skills" id="listOfSkills"></ul>
       </section>
 
       <section class="projects" id="projects">
