--- a/public/admin.html
+++ b/public/admin.html
@@ -59,7 +59,7 @@
     <section id="addNewSkill">
       <h2>Add new skill</h2>
       <form id="addSkillForm">
-        <div id="skillName">
+        <div id="skillContainers">
           <label for="skillName">Skill Name:</label>
           <input type="text" id="skillName" required />
         </div>
