changed completely hamburger menu

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,15 @@
             </li>
           </ul>
         </nav>
-        <div class="popup" id="popup"></div>
+        <div class="popup" id="popup">
+          <ul class="mobile-menu" id="mobile-menu">
+            <li><a href="#home" class="mobile-menu-items">Home</a></li>
+            <li><a href="#skills" class="mobile-menu-items">Skills</a></li>
+            <li><a href="#projects" class="mobile-menu-items">Projects</a></li>
+            <li><a href="#contact" class="mobile-menu-items">Contact</a></li>
+            <li><a href="#adminLogInForm" class="mobile-menu-items">Log in</a></li>
+          </ul>
+        </div>
         <div class="frontPage" id="home">
           <img
             src="./images/profile-photo.jpg"
