changed completely hamburger menu on admin

--- a/public/admin.html
+++ b/public/admin.html
@@ -21,9 +21,16 @@
         <li><a href="#addNewSkill">Add skill</a></li>
         <li><a href="#skillsUpdate">Update skills</a></li>
         <li><a href="#jokes">Jokes</a></li>
-        <li><a href="#jokes">Log out</a></li>
+        <li><a href="#logoutButton">Log out</a></li>
       </ul>
-      <div class="popup" id="popup"></div>
+      <div class="popup" id="popup"><ul class="mobile-menu" id="mobile-menu">
+        <li><a href="#messages">Messages</a></li>
+        <li><a href="#converter">Converter</a></li>
+        <li><a href="#addNewSkill">Add skill</a></li>
+        <li><a href="#skillsUpdate">Update skills</a></li>
+        <li><a href="#jokes">Jokes</a></li>
+        <li><a href="#logoutButton">Log out</a></li>
+      </ul></div>
     </nav>
     <h1>Admin Page</h1>
     <section id="messages">
